# AI-Assistant-Competition

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  TEST_COVERAGE_ANALYSIS.md  package-lock.json  pyproject.toml  test_add_students.py  test_csv_robustness.py
.devcontainer/: README.md  devcontainer.json
.github/workflows/: ci.yml
database/: Populate_Tables_AI_Negotiator.sql  Populate_Tables_AI_Negotiator_Minimal.sql  Tables_AI_Negotiator.sql  students_ai_negotiator.csv
documentation/: API_KEY_PROVIDER_PLAN.md  AUTOGEN_ALTERNATIVES_ASSESSMENT.md  DEVELOPER_GUIDE.md  SECRETS_RUNBOOK.md  USER_GUIDE.md
scripts/: TEST_SIMULATION_GUIDE.md  create_admin_user.py  setup_simulation_test.py
streamlit/: 0_Home.py  environment.yml  requirements.txt
streamlit/.streamlit/: secrets.example.toml
streamlit/modules/: app_version.py  auth_guard.py  control_panel_ui_helpers.py  conversation_engine.py  database_handler.py  drive_file_manager.py  email_service.py  game_modes.py  llm_models.py  llm_provider.py  metrics_handler.py  negotiation_display.py  negotiations.py  negotiations_agents.py  negotiations_common.py  negotiations_pd.py  negotiations_run_helpers.py  negotiations_summary.py  schedule.py  sidebar.py  student_playground.py  student_utils.py
streamlit/modules/control_panel/: create_game.py  game_overview.py  game_overview_results.py  game_overview_setup.py  game_overview_simulation.py  game_overview_submissions.py  state.py  student_management.py  view.py
streamlit/pages/: 1_Play.py  2_Control_Panel.py  3_Playground.py  4_About.py  4_Profile.py  5_Playground.py
tests/: conftest.py  test_drive_parent_folder_id.py  unit_tests.py
tests/e2e/: conftest.py  test_add_student.py  test_example.py  test_game_creation.py  test_run_simulation.py
tests/integration/: __init__.py  test_conversation_engine_api.py  test_csv_processing.py  test_openai_latency.py
tests/unit/: __init__.py  test_app_version.py  test_auth_guard.py  test_control_panel_ui_helpers.py  test_conversation_engine.py  test_database_crud.py  test_drive.py  test_email.py  test_email_password_reset.py  test_leaderboard_scores.py  test_negotiation_chat_storage.py  test_negotiation_display.py  test_negotiations_logic.py  test_negotiations_pd.py  test_negotiations_scoring.py  test_schedule.py  test_sidebar_version.py  test_student_utils.py
